Refactor Azure credentials handling to use secrets directly and improve security in CI/CD workflow

--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -107,7 +107,6 @@ jobs:
     outputs:
       environment-approved: ${{ steps.approval-check.outputs.approved }}
       selected-environment: ${{ github.event.inputs.environment || 'dev-rodrigo' }}
-      azure-credentials: ${{ steps.get-credentials.outputs.azure-creds }}
     # Only run Terraform when merge occurs on master branch (CD requirement)
     if: |
       needs.build-and-test.result == 'success' &&
@@ -136,16 +135,6 @@ jobs:
           echo "Azure Suffix: Configured ✅"
           echo "Key Vault Name: Computed ✅"
           echo "✅ All configuration variables are properly set"
-
-      - name: 🔐 Get Azure Credentials
-        id: get-credentials
-        run: |
-          # Store credentials in job output (more secure than environment variables)
-          # The actual credential value is not logged, only a success message
-          echo "azure-creds<<EOF" >> $GITHUB_OUTPUT
-          echo "${{ secrets.AZURE_CREDENTIALS }}" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-          echo "✅ Azure credentials prepared for downstream jobs"
 
       - name: ⚙️ Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -209,8 +198,9 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     needs: [terraform-deploy]
+    environment: ${{ needs.terraform-deploy.outputs.selected-environment }}
     # Run after Terraform completes successfully and before application deployment
-    # Note: Inherits credentials from terraform-deploy job - no additional approval required
+    # Note: Uses environment to access Azure credentials for reliable authentication
     if: |
       needs.terraform-deploy.result == 'success' &&
       needs.terraform-deploy.outputs.environment-approved == 'true' &&
@@ -225,7 +215,7 @@ jobs:
       - name: 🔐 Azure Login
         uses: azure/login@v2
         with:
-          creds: ${{ needs.terraform-deploy.outputs.azure-credentials }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 🗄️ Check and Start PostgreSQL Database
         env:
@@ -388,7 +378,8 @@ jobs:
     timeout-minutes: 30
     # Run after both Terraform and Database Health Check complete successfully
     needs: [build-and-test, terraform-deploy, database-health-check]
-    # Note: Inherits credentials from terraform-deploy job - no additional approval required
+    environment: ${{ needs.terraform-deploy.outputs.selected-environment }}
+    # Note: Uses environment to access Azure credentials for reliable authentication
     # Deploy only when all previous jobs succeed, and merge occurs on master branch
     if: |
       always() &&
@@ -411,7 +402,7 @@ jobs:
       - name: 🔐 Login to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ needs.terraform-deploy.outputs.azure-credentials }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: 🔑 Fetch all secrets from Azure Key Vault
         id: fetch-secrets
@@ -426,9 +417,9 @@ jobs:
             otel-auth-header,grafana-api-token,grafana-endpoint,
             grafana-protocol,grafana-resource-attributes,grafana-prometheus-api-token
         env:
-          AZURE_CLIENT_ID: ${{ fromJson(needs.terraform-deploy.outputs.azure-credentials).clientId }}
-          AZURE_TENANT_ID: ${{ fromJson(needs.terraform-deploy.outputs.azure-credentials).tenantId }}
-          AZURE_CLIENT_SECRET: ${{ fromJson(needs.terraform-deploy.outputs.azure-credentials).clientSecret }}
+          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+          AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+          AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: 🔍 Validate critical secrets
         env:
@@ -586,7 +577,7 @@ jobs:
           echo "✅ **Deployment completed successfully!**" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### 🔍 Quick Links" >> $GITHUB_STEP_SUMMARY
-          echo "- 📊 [Azure Portal](https://portal.azure.com/#@/resource/subscriptions/${{ fromJson(needs.terraform-deploy.outputs.azure-credentials).subscriptionId }}/resourceGroups/${{ env.RESOURCE_GROUP }}/overview)" >> $GITHUB_STEP_SUMMARY
+          echo "- 📊 [Azure Portal](https://portal.azure.com/#@/resource/subscriptions/\$AZURE_SUBSCRIPTION_ID/resourceGroups/${{ env.RESOURCE_GROUP }}/overview)" >> $GITHUB_STEP_SUMMARY
           
           if [ -n "$APP_URL" ]; then
             echo "- 🌐 [Live Application]($APP_URL)" >> $GITHUB_STEP_SUMMARY
