--- a/.github/workflows/ci_cd_deploy_workflow.yml
+++ b/.github/workflows/ci_cd_deploy_workflow.yml
@@ -33,7 +33,7 @@ env:
   
   # Terraform
   TF_VERSION: '1.12.2'
-  TF_WORKING_DIR: './infra/terraform/dev'
+  TF_WORKING_DIR: './infra/terraform/azure/dev'
   TF_WORKSPACE: ${{ vars.TF_WORKSPACE }}
   TF_CLOUD_ORGANIZATION: ${{ vars.TF_CLOUD_ORGANIZATION }}
 
